<resources>
    <string name="app_name">Basic Banking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeImage">HomeImage</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_help_logging_in">Get help logging in.</string>
    <string name="forgot_your_login_details">Forgot your Login details?</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_to_social_integration_app">Welcome To Social Integration App</string>
    <string name="logout">logout</string>
    <string name="user_profile">User Profile</string>
    <string name="facebook_app_id">325001589076332</string>
    <string name="fb_login_protocol_scheme">fb325001589076332</string>

</resources>