<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupFragment">

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="gone"
            android:indeterminateTint="#3AA2F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/signUpView"
            android:layout_width="0dp"
            android:visibility="visible"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/homeImage"
                android:src="@drawable/gradient_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.27"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutSignup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/corner_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".78"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">

                <EditText
                    android:id="@+id/signUpName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".1"
                    app:layout_constraintWidth_percent=".8" />

                <EditText
                    android:id="@+id/signUpEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpName"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8" />

                <EditText
                    android:id="@+id/signUpPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8" />

                <EditText
                    android:id="@+id/signUpConfrmPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpPass"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8" />


                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpConfrmPass"
                    app:layout_constraintVertical_bias="0.1"
                    app:layout_constraintWidth_percent=".8" />



                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="#0E0E0E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/already_have_an_account"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/loginTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="LogIn"
                        android:textColor="#3AA5F5"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/loginappIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/homeImage"
                android:src="@drawable/social_media"
                app:flow_horizontalBias="1"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_social_integration_app"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginappIcon"
                app:layout_constraintVertical_bias=".2" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
