<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ProgressBar
            android:id="@+id/progressBarLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="gone"
            android:indeterminateTint="#3AA2F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logInView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgViewLogIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/homeImage"
                android:src="@drawable/gradient_bg"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.27"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/corner_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".78"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".2"
                    app:layout_constraintWidth_percent=".8" />

                <EditText
                    android:id="@+id/loginPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginEmail"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8" />


                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".5"
                    app:layout_constraintWidth_percent=".8" />

                <LinearLayout
                    android:id="@+id/linearLayoutOkiew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8">

                    <View
                        android:id="@+id/view1"
                        android:layout_width="0dp"
                        android:layout_height="0.2dp"
                        android:layout_weight="1"
                        android:background="#0E0E0E"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="#0E0E0E"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="0.2dp"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:background="#0E0E0E"
                        android:gravity="center" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayoutGoFb"
                    android:layout_width="0dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutOkiew"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent="0.8">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:backgroundTint="@color/white"
                        android:elevation="35dp"
                        android:src="@drawable/ic_google"
                        app:tint="@null" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/fab_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="#0E0E0E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayoutGoFb"
                    app:layout_constraintVertical_bias="0.4" />


                <LinearLayout
                    android:id="@+id/linearLayoutSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/signupTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sign_up"
                        android:textColor="#3AA5F5"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/loginappIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/homeImage"
                android:src="@drawable/social_media"
                app:flow_horizontalBias="1"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_social_integration_app"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginappIcon"
                app:layout_constraintVertical_bias=".2" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
